# advent-of-code

./: Cargo.toml  newday.bat
aoc-2022/: Cargo.toml
aoc-2022/day_04_camp_cleanup/src/: main.rs
aoc-2022/day_05_supply_stacks/src/: main.rs
aoc-2022/day_07_no_space_left_on_device/src/: main.rs
aoc-2022/day_12_hill_climbing_algorithms/src/: main.rs
aoc-2022/day_14_regolith_reservoir/src/: main.rs
aoc-2022/day_16_proboscidea_volcanium/src/: main.rs
day_01_calorie_counting/src/: main.rs
day_02_rock_paper_scissors/src/: main.rs
day_03_rucksack_reorganization/src/: main.rs
day_04_camp_cleanup/src/: main.rs
day_05_supply_stacks/src/: main.rs
day_06_tuning_trouble/src/: main.rs
day_07_no_space_left_on_device/src/: main.rs
day_08_treetop_tree_house/src/: main.rs
day_09_rope_bridge/src/: main.rs
day_10_cathode_ray_tube/src/: main.rs
day_11_monkey_in_the_middle/src/: main.rs
day_12_hill_climbing_algorithms/: Cargo.toml
day_12_hill_climbing_algorithms/src/: main.rs
day_13_distress_signal/src/: main.rs
day_14_regolith_reservoir/src/: main.rs
day_15_beacon_exclusion_zone/src/: main.rs
