[workspace]
members = [
    "day_01_calorie_counting", 
    "day_02_rock_paper_scissors",
    "day_03_rucksack_reorganization",
    "day_04_camp_cleanup",
    "day_05_supply_stacks",
    "day_06_tuning_trouble",
    "day_07_no_space_left_on_device",
    "day_08_treetop_tree_house",
    "day_09_rope_bridge",
    "day_10_cathode_ray_tube",
    "day_11_monkey_in_the_middle",
    "day_12_hill_climbing_algorithms",
    "day_13_distress_signal",
    "day_14_regolith_reservoir",
    "day_15_beacon_exclusion_zone",
    "day_16_proboscidea_volcanium",
]